--- a/templates/about.html
+++ b/templates/about.html
@@ -13,8 +13,7 @@
         You can make changes directly in the spreadsheet and then upload those changes into OnCore via Summary Accrual
         Import Tool</p>
     <div>
-        <a class="small col-md-6" href='/accrual/static/summary_accrual.xlsx' target="_blank">Download accrual
-            spreadsheet template</a>
+        <a class="small col-md-6" href='/accrual/static/summary_accrual.xlsx' target="_blank">Download accrual spreadsheet template</a>
     </div>
     <br/>
     <h6>Preparing for Import</h6>
