--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,7 @@
                 <p> Note: the login credentials are the same as OnCore login credentials</p>
             </div>
             <div class="user-login-box">
-                 <form action="/" class="p-5 user" method="post">
-<!--                <form action="/accrual" class="p-5 user" method="post">-->
+                <form action="/accrual" class="p-5 user" method="post">
                     <h1 class="h4 text-center text-gray-900 mb-4">Login</h1>
                     {% if error %}
                     <div class="alert alert-danger">
