--- a/templates/base.html
+++ b/templates/base.html
@@ -2,21 +2,13 @@
 <html>
 <head>
     <title>{% block title %}{{ title }}{% endblock %}</title>
-    <script src="/static/js/jquery.min.js" type='text/javascript'></script>
-<link href="/static/css/bootstrap.min.css" rel="stylesheet">
-<link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">
-<link href="/static/css/sb-admin-2.css" rel="stylesheet">
-<link href="/static/css/accruals.css" rel="stylesheet">
-<script src="/static/js/bootstrap.min.js" type='text/javascript'></script>
-<script src="/static/js/accruals.js" type='text/javascript'></script>
-
-<!--    <script src="/accrual/static/js/jquery.min.js" type='text/javascript'></script>-->
-<!--    <link href="/accrual/static/css/bootstrap.min.css" rel="stylesheet">-->
-<!--    <link href="/accrual/static/css/bootstrap-theme.min.css" rel="stylesheet">-->
-<!--    <link href="/accrual/static/css/sb-admin-2.css" rel="stylesheet">-->
-<!--    <link href="/accrual/static/css/accruals.css" rel="stylesheet">-->
-<!--    <script src="/accrual/static/js/bootstrap.min.js" type='text/javascript'></script>-->
-<!--    <script src="/accrual/static/js/accruals.js" type='text/javascript'></script>-->
+    <script src="/accrual/static/js/jquery.min.js" type='text/javascript'></script>
+    <link href="/accrual/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/accrual/static/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="/accrual/static/css/sb-admin-2.css" rel="stylesheet">
+    <link href="/accrual/static/css/accruals.css" rel="stylesheet">
+    <script src="/accrual/static/js/bootstrap.min.js" type='text/javascript'></script>
+    <script src="/accrual/static/js/accruals.js" type='text/javascript'></script>
 </head>
 <body>
 {% if protocol_no %}
@@ -38,7 +30,7 @@
                href="/accrual/data/{{user_name}}/{{protocol_no}}">Review</a>
         </li>
         {% endif %}
-        {% if 'results' in session %}
+        {% if 'total_accruals_imported' in session %}
         <li class="nav-item">
             <a class="nav-link {{'text-primary' if response else 'text-gray-600'}}"
                href="/accrual/summary/{{user_name}}/{{protocol_no}}">Data</a>
