--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
                     {% endif %}
                     <div class="form-group">
                         <input aria-describedby="protocol_no" class="form-control form-control-user" id="protocol_no" name="protocol_no"
-                               placeholder="Enter OnCore Protocol No" type="text">
+                               placeholder="Enter OnCore Protocol No (e.g. OCR12345)" type="text">
                     </div>
                     <div class="form-group">
                         <input aria-describedby="username" class="form-control form-control-user" id="username" name="username"
