--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>{% block title %}{{ title }}{% endblock %}</title>
+    <script src="/accrual/static/js/accruals.js" type='text/javascript'></script>
     <script src="/accrual/static/js/jquery.min.js" type='text/javascript'></script>
     <link href="/accrual/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/accrual/static/css/bootstrap-theme.min.css" rel="stylesheet">
