Changing the Downloadable template to .XLSM

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                     </button>
                     <div class="content-center col-md-12">
                         <!--                              <a class="small col-md-6" style="border-right: 1px solid #e3e6f0" href="/about">Import tool user guide</a>-->
-                        <a class="small col-md-6 offset-md-3" href='/accrual/static/summary_accrual.xlsx' target="_blank">Download accrual template</a>
+                        <a class="small col-md-6 offset-md-3" href='/accrual/static/summary_accrual.xlsm' target="_blank">Download accrual template</a>
                     </div>
                 </form>
             </div>
